package edu.hitsz.strategy;

import edu.hitsz.aircraft.AbstractAircraft;
import edu.hitsz.bullet.BaseBullet;

import java.util.List;

/**
 * Strategy interface for bullet patterns.
 */
public interface IShootStrategy {
    List<BaseBullet> shoot(AbstractAircraft host, int power);
}
