@startuml
title Shoot Strategy Pattern

interface IShootStrategy {
    + shoot(AbstractAircraft host, int power): List<BaseBullet>
}

class StraightShootStrategy {
    + shoot(AbstractAircraft host, int power): List<BaseBullet>
}

class SpreadShootStrategy {
    - bulletCount: int
    + shoot(AbstractAircraft host, int power): List<BaseBullet>
}

class CircleShootStrategy {
    - bulletCount: int
    + shoot(AbstractAircraft host, int power): List<BaseBullet>
}

class ShootContext {
    - strategy: IShootStrategy
    + ShootContext(IShootStrategy strategy)
    + setStrategy(IShootStrategy strategy): void
    + execute(AbstractAircraft host, int power): List<BaseBullet>
}

IShootStrategy <|.. StraightShootStrategy
IShootStrategy <|.. SpreadShootStrategy
IShootStrategy <|.. CircleShootStrategy

ShootContext o--> IShootStrategy

@enduml
